--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "repository": "git@github.com:lolPants/fbaas.git",
   "author": "Jack Baron <jackmbaron@gmail.com> (https://www.jackbaron.com)",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/node": "^12.0.0",
+    "prettier": "^1.17.0",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.4.5"
+  }
 }
