--- a/package.json
+++ b/package.json
@@ -18,11 +18,23 @@
     "dev": "npm run watch -- --sourceMap"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.40",
+    "@types/koa__cors": "^2.2.3",
     "@types/node": "^12.0.0",
+    "@types/signale": "^1.2.1",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "@koa/cors": "^3.0.0",
+    "dotenv": "^8.0.0",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "signale": "^1.4.0"
   }
 }
