--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^12.0.0",
     "@types/signale": "^1.2.1",
     "prettier": "^1.17.0",
+    "rimraf": "^2.6.3",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
