--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ after_success:
   - echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
   - export REPO=lolpants/fbaas
   - export TAG=$(if [ "$BRANCH" == "master" ]; then echo "latest"; else echo $BRANCH ; fi)
-  - docker build -f Dockerfile -t $REPO:$TRAVIS_COMMIT .
+  - docker pull $REPO || true
+  - docker build --pull --cache-from $REPO -f Dockerfile -t $REPO:$TRAVIS_COMMIT .
   - docker tag $REPO:$TRAVIS_COMMIT $REPO:$TAG
   - docker push $REPO
